small tweaks, need to correct the menu on small screen.,

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -178,7 +178,8 @@ iframe {
 
 
 footer {
-  
+  display: flex;
+  text-align: center;
   justify-content: center;
   align-items: center;
   color:#3a3a3a;
@@ -198,16 +199,41 @@ footer {
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 @media screen and (max-width: 768px) {
   .main {
     display: flex;
 
   }
   section {
+    
     flex-direction: column;
     flex-basis: auto;
-    
-    
+    align-items: center;
+    width: 80%;
+        
+  }
+  
+  footer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
   }
 }
 
@@ -219,8 +245,24 @@ footer {
 
 
 @media screen and (max-width: 400px) {
+  .header {
+    margin-bottom: 5%;
+    position: fixed;
+  }
+  
+  
+  #hero {
+    margin-top: 10%;
+    width: 84%;
+    height: 80vh;
+  }
+  
+  
   .main {
     display: inline-block;
+  }
+  section {
+    width: 80%;
   }
   
   
@@ -271,33 +313,92 @@ footer {
   left: 0;
   right: 0;
   z-index: 9999;
-  padding-bottom: 3%;
+  padding-bottom: 1%;
  }
 
-
+ footer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
-  @media screen and (min-width: 401px) and (max-width: 451px) {
-    #menu {
+}
   
+
+
+
+
+@media screen and (min-width: 401px) and (max-width: 651px) {
+    .header {
+      margin-bottom: 5%;
+      position: fixed;
     }
+    
+    
+    #hero {
+      margin-top: 10%;
+      width: 84%;
+      height: 80vh;
+    }
+    
+    
+    .main {
+      display: inline-block;
+    }
+    
+    
+    #menu {
+     display: none;
+    }
+    #mob-menu {
+     position: fixed;
+     top: 5%;
+     left:3%;
+     z-index: 9999;
+     background-image: linear-gradient(30deg, #ffbe5a, #963c96, #3C1874, #963c96);
+     color: white;
+     width: fit-content;
+     height: 3rem;
+     padding-right: 5px;
+     font-size: 1rem;
+     border: none;
+     text-align: center;
+     
+     box-shadow: 2px 2px 2px 0 #3a3a3a;
+     perspective: 800px;
+   }
+   .drop-down-mob {
+    display: none;
+   }
+   #mob-menu:hover + .drop-down-mob {
+    position: absolute;
+    top: 14%;
+    left: 10%;
+    z-index: 9999;
+    width: 35%;
+    height: 8rem;
+    display: block;
+    line-height:1.8;
+    background-image: linear-gradient(30deg, #ffbe5a, #963c96, #3C1874, #963c96);
+    border: rgba(255, 251, 110,0.7);
+    color:white;
+    box-shadow: -2px -2px 2px 0 #3a3a3a;
+    }
+    
+  .header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 9999;
+    padding-bottom: 3%;
+   } 
    #mob-menu +.drop-down-mob{
       display: none;
     }
     .hidden {
       display: none;
-    }
-  }
-  
-  @media screen and (min-width: 452px) {
-    #menu {
-      display: block;
-    }
-    #mob-menu +.drop-down-mob {
-      display: none;
-    }
-    .hidden {
-      display: none;
-
     }
   }
   
